# tkj-harkka

./: .gitignore  .gitlab-ci.yml  .~lock.dots.csv#  .~lock.space.csv#  CMakeLists.txt  README.md  data.csv  diagram.json  neutral_pos_mikko.csv  space.csv  wokwi.toml
assets/: dev_comms_state.puml  gesture_state.puml  morse_decoder_tree_example.puml  state_old.puml
data/: data.csv  dots.csv  neutral_pos_mikko_filtered.csv  neutral_pos_mikko_no_filter.csv  space.csv
examples/compilation_errors/src/: main.c
examples/hello_hat/src/: main.c
libs/TKJHAT/include/tkjhat/: sdk.h
libs/TKJHAT/src/: sdk.c
libs/morso/: CMakeLists.txt
libs/morso/include/morso/: morso.h
libs/morso/src/: morso.c
libs/morso/tests/: CMakeLists.txt  morso_test.c
libs/sensors/: CMakeLists.txt
libs/sensors/buzzer_test/: CMakeLists.txt
libs/sensors/buzzer_test/src/: main.c
libs/sensors/display_test/: CMakeLists.txt
libs/sensors/display_test/src/: main.c
libs/sensors/include/sensors/: buzzer.h  message_output.h  sensors.h
libs/sensors/src/: buzzer.c  message_output.c  sensors.c
libs/tkj_utils/: CMakeLists.txt
libs/tkj_utils/buzzer_test/: CMakeLists.txt
libs/tkj_utils/buzzer_test/src/: main.c
libs/tkj_utils/display_test/: CMakeLists.txt
libs/tkj_utils/display_test/src/: example_main.c  main.c
libs/tkj_utils/include/tkj_utils/: melody.h  message_output.h  tkj_utils.h
libs/tkj_utils/src/: buzzer.c  melody.c  message_output.c  tkj_utils.c
src/: main.c  oldmain.c
